➖ refactor: remove trpc

--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
-    "@trpc/client": "^10.37.1",
-    "@trpc/next": "^10.37.1",
-    "@trpc/react-query": "^10.37.1",
-    "@trpc/server": "^10.37.1",
     "next": "^14.0.0",
     "next-auth": "^4.24.4",
     "react": "18.2.0",
@@ -30,6 +26,7 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.33",
@@ -40,6 +37,9 @@
     "commitlint-config-gitmoji": "^2.3.1",
     "eslint": "^8.47.0",
     "eslint-config-next": "^14.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
